--- a/DWEC/Index/Ejer_2-1.html
+++ b/DWEC/Index/Ejer_2-1.html
@@ -3,11 +3,11 @@
     <head>
        <meta charset="UTF-8">
        <title> Ejercicios Actividad 2.1  </title>
-       <script src = "/DWEC/Scripts/script1.js"></script>
-       <script src = "/DWEC/Scripts/script2.js"></script>
-       <script src = "/DWEC/Scripts/script3.js"></script>
-       <script src = "/DWEC/Scripts/script4.js"></script>
-       <script src = "/DWEC/Scripts/script5.js"></script>
+       <script src = "/DWEC/Scripts/Act_2-1/script1.js"></script>
+       <script src = "/DWEC/Scripts/Act_2-1/script2.js"></script>
+       <script src = "/DWEC/Scripts/Act_2-1/script3.js"></script>
+       <script src = "/DWEC/Scripts/Act_2-1/script4.js"></script>
+       <script src = "/DWEC/Scripts/Act_2-1/script5.js"></script>
       
         <style>
             * {
@@ -107,7 +107,7 @@
                     <label for="veces">Veces: </label><br>
                     <input type="number" id="vecesEj3" min="1" value="3">
 
-                    <button onclick="dobles()">Calcular</button>
+                    <button onclick="dobles(event)">Calcular</button>
                 </form>
                 
                 <p id="salidaEj3"></p>
