--- a/DWEC/EncTesoro/index.html
+++ b/DWEC/EncTesoro/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Css/main.css">
 </head>
 <body>
-    <h1>Encuenra el Tesoro</h1>
+    <h1>Encuentra el Tesoro</h1>
 
     <img src="Images/treasuremap.png" id="map" width="400" height="400">
 
