--- a/DInterfaz/Practica5/index.html
+++ b/DInterfaz/Practica5/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div class="card">
-    <img src="https://via.placeholder.com/150" alt="Foto de perfil" class="avatar">
-    <h2 class="name">Nombre del Alumno</h2>
+    <img src="fotoPerfil.png" alt="Foto de perfil" class="avatar">
+    <h2 class="name">Mc Lovin</h2>
     <p class="bio">Estudiante de desarrollo web, apasionado por el diseño y la programación.</p>
     <button class="btn">Conectar</button>
   </div>
