--- a/DInterfaz/PracticaUD10/Ejer2.html
+++ b/DInterfaz/PracticaUD10/Ejer2.html
@@ -19,16 +19,12 @@
 
         /* Versión A: Usando float */
         .version-a .imagen {
-            /* TU CÓDIGO AQUÍ - usar float */
+            float: left;
         }
 
         /* Versión B: Usando position */
-        .version-b {
-            /* TU CÓDIGO AQUÍ - configurar contenedor */
-        }
-
         .version-b .imagen {
-            /* TU CÓDIGO AQUÍ - usar position absolute */
+            position: absolute;
         }
     </style>
 </head>
@@ -51,6 +47,7 @@
     </div>
 
     <h3>Pregunta:</h3>
-    <p>¿Qué diferencias observas en el comportamiento del texto?</p>
+    <p><strong>¿Qué diferencias observas en el comportamiento del texto?</strong></p>
+    <p>En la versión A, el texto se pega a la imagen. Y en la versión B, la imagen se monta encima del texto, tapándolo.</p>
 </body>
 </html>
