--- a/DInterfaz/PracticaUD10/Ejer3.html
+++ b/DInterfaz/PracticaUD10/Ejer3.html
@@ -13,7 +13,7 @@
         }
 
         .caja-roja {
-            position: absolute;
+            float: right; 
             top: 0;
             right: 0;
             width: 50px;
@@ -33,9 +33,12 @@
 
     <h3>Tareas:</h3>
     <ol>
-        <li>Identifica el problema</li>
-        <li>Corrígelo con el mínimo cambio posible</li>
-        <li>Explica el concepto de "contenedor posicionado"</li>
+        <li><strong>Identifica el problema</strong></li>
+            <p>El problema es que la caja roja tenia position: absolute, esto saca el elemento del flujo y lo coloca respecto al contendor posicionado.</p>
+        <li><strong>Corrígelo con el mínimo cambio posible</strong></li>
+            <p>Lo que he hecho es cambiar la position: absolute, por un float: right</p>
+        <li><strong>Explica el concepto de "contenedor posicionado"</strong></li>
+            <p>Es un elemento al que se le aplica la propiedad de position para moverlo.</p>
     </ol>
 </body>
 </html>
