--- a/DInterfaz/PracticaUD10/Ejer4.html
+++ b/DInterfaz/PracticaUD10/Ejer4.html
@@ -22,7 +22,10 @@
             align-items: center;
             justify-content: center;
             font-weight: bold;
-            /* TU CÓDIGO AQUÍ */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
