--- a/DInterfaz/PracticaUD10/Ejer5.html
+++ b/DInterfaz/PracticaUD10/Ejer5.html
@@ -11,10 +11,11 @@
         }
 
         .header {
-            position: sticky;
             background: navy;
             color: white;
             padding: 1em;
+            position: sticky;
+            top: 0;
         }
 
         .content {
