--- a/DInterfaz/PracticaUD10/Ejer6.html
+++ b/DInterfaz/PracticaUD10/Ejer6.html
@@ -27,9 +27,9 @@
 
         .roja { 
             background: red; 
-            top: 20px; 
-            left: 20px; 
-            z-index: 100; 
+            top: 60px; 
+            left: 60px; 
+            z-index: 20; 
         }
 
         .azul { 
@@ -41,9 +41,9 @@
 
         .verde { 
             background: green; 
-            top: 60px; 
-            left: 60px; 
-            z-index: 10; 
+            top: 20px; 
+            left: 20px; 
+            z-index: 60; 
         }
     </style>
 </head>
@@ -65,6 +65,7 @@
     </ol>
 
     <h3>Pregunta trampa:</h3>
-    <p>¿Por qué no basta con cambiar solo los valores de z-index?</p>
+    <p><strong>¿Por qué no basta con cambiar solo los valores de z-index?</strong></p>
+        <p>Por que también hay que cambiar la posicion de las cajas, alterando el top y el left.</p>
 </body>
 </html>
