--- a/DInterfaz/PracticaUD10/Ejer7.html
+++ b/DInterfaz/PracticaUD10/Ejer7.html
@@ -14,13 +14,16 @@
         }
 
         .titulo-superpuesto {
-            /* TU CÓDIGO AQUÍ - posicionar encima de la imagen */
+            top: 10px;                
+            left: 20px; 
         }
 
         .imagen-circular {
+            float: left;               
             width: 200px;
             height: 200px;
-            /* TU CÓDIGO AQUÍ - float, border-radius y shape-outside */
+            border-radius: 50%;        
+            shape-outside: circle(50%); 
         }
     </style>
 </head>
