--- a/DInterfaz/PracticaUD10/Ejer9.html
+++ b/DInterfaz/PracticaUD10/Ejer9.html
@@ -12,20 +12,47 @@
         }
 
         .trigger {
-            /* TU CÓDIGO AQUÍ - configurar el elemento trigger */
+            /* configurar el elemento trigger */
+            position: relative;
+            color: rgb(0, 89, 255);
+            cursor: pointer;
         }
 
         .trigger::before {
-            /* TU CÓDIGO AQUÍ - crear el tooltip */
+            /* crear el tooltip */
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: 125%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(31, 31, 31, 0.904);
+            color: white;
+            padding: 5px 8px;
+            border-radius: 4px;
+            font-size: 0.9em;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.5s ease, transform 0.5s ease;
         }
 
         .trigger::after {
-            /* TU CÓDIGO AQUÍ - crear la flecha del tooltip */
+            /* crear la flecha del tooltip */
+            content: "";
+            position: absolute;
+            bottom: 55%;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 5px solid transparent;
+            border-top-color: rgba(31, 30, 30, 0.726);
+            opacity: 0;
+            visibility: hidden;
         }
 
         .trigger:hover::before,
         .trigger:hover::after {
-            /* TU CÓDIGO AQUÍ - mostrar tooltip al hacer hover */
+            /* mostrar tooltip al hacer hover */
+            opacity: 1;
+            visibility: visible;
         }
     </style>
 </head>
@@ -34,11 +61,11 @@
     <p><strong>Objetivo:</strong> Crea un tooltip que aparezca al hacer hover, centrado respecto al elemento trigger.</p>
 
     <div style="margin: 100px 0;">
-        <p>Pasa el ratón sobre <span class="trigger">esta palabra</span> para ver el tooltip.</p>
+        <p>Pasa el ratón sobre <span class="trigger" data-tooltip="Soy un tooltip">esta palabra</span> para ver el tooltip.</p>
         
-        <p>También puedes probar con <span class="trigger">otra palabra</span> en diferentes posiciones del texto.</p>
+        <p>También puedes probar con <span class="trigger" data-tooltip="Otro tooltip">otra palabra</span> en diferentes posiciones del texto.</p>
         
-        <p>El tooltip debería aparecer <span class="trigger">correctamente posicionado</span> sin importar dónde esté la palabra en la página.</p>
+        <p>El tooltip debería aparecer <span class="trigger" data-tooltip="Centrado respecto al texto">correctamente posicionado</span> sin importar dónde esté la palabra en la página.</p>
     </div>
 
     <h3>Reto:</h3>
