--- a/DInterfaz/PracticaUD10/Ejer1.html
+++ b/DInterfaz/PracticaUD10/Ejer1.html
@@ -6,14 +6,13 @@
     <title>Ejercicio 1: Contenedor Colapsado</title>
     <style>
         .gallery {
+            display: flex;
+            gap: 10px;
             border: 3px solid green;
             padding: 10px;
         }
-
         .gallery img {
-            float: left;
             width: 30%;
-            margin: 1%;
         }
     </style>
 </head>
@@ -31,9 +30,13 @@
 
     <h3>Tareas:</h3>
     <ol>
-        <li>Explica por qué el borde no se ve</li>
-        <li>Proporciona 2 soluciones diferentes</li>
-        <li>¿Cuál es la solución moderna recomendada?</li>
+        <li><strong>Explica por qué el borde no se ve</strong></li>
+            <p>Por que los hijos están flotando, por eso no los detecta.</p>
+        <li><strong>Proporciona 2 soluciones diferentes</strong></li>
+            <p>- Usar overflow: auto;. El contenedor hace que vuelva a calcular su altura según el contenido flotante.</p>
+            <p>- Usar un “clearfix”. Inserta un elemento invisible al final que “fuerza” al contenedor a envolver sus elementos flotantes.</p>
+        <li><strong>¿Cuál es la solución moderna recomendada?</strong></li>
+            <p>La opción moderna y más recomendable es usar: display: flex;</p>
     </ol>
 </body>
 </html>
