--- a/DWEC/Index/Act_2-3.html
+++ b/DWEC/Index/Act_2-3.html
@@ -47,7 +47,6 @@
             <h1>Ejercicios Actividad 2.3</h1>
         </header>
         
-        
         <main>
             <div class="divClass"">
                 <h2 class="titulos">Ejercicio 1</h2>
@@ -75,77 +74,35 @@
 
                 <button type="button" onclick="verMenus()">Continuar</button>
 
-                <div id="paso2" style="display:none;">
-                    <h3>Menús disponibles</h3>
-                    <p>Menú 1 (Económico): 12.50 €</p>
-                    <p>Menú 2 (Clásico): 18.75 €</p>
-                    <p>Menú 3 (Premium): 25.40 €</p>
-                    <p>Menú infantil: 8.90 €</p>
-                    <p><i>Precios sin IVA (10%)</i></p>
+                <div>
+                    <div id="paso2" style="display:none;">
+                        <h3>Menús disponibles</h3>
+                        <p>Menú 1 (Económico): 12.50 €</p>
+                        <p>Menú 2 (Clásico): 18.75 €</p>
+                        <p>Menú 3 (Premium): 25.40 €</p>
+                        <p>Menú infantil: 8.90 €</p>
+                        <p><i>Precios sin IVA (10%)</i></p>
 
-                    <h3>Elige los menús para adultos</h3>
-                    <label>¿Cuántos comerán el menú 1?</label><br>
-                    <input type="number" id="m1" min="0"><br><br>
-                    <label>¿Cuántos comerán el menú 2?</label><br>
-                    <input type="number" id="m2" min="0"><br><br>
-                    <label>¿Cuántos comerán el menú 3?</label><br>
-                    <input type="number" id="m3" min="0"><br><br>
-                    <button type="button" onclick="calcularFactura()">Calcular factura</button>
+                        <h3>Elige los menús para adultos</h3>
+                        <label>¿Cuántos comerán el menú 1?</label><br>
+                        <input type="number" id="m1" min="0"><br><br>
+                        <label>¿Cuántos comerán el menú 2?</label><br>
+                        <input type="number" id="m2" min="0"><br><br>
+                        <label>¿Cuántos comerán el menú 3?</label><br>
+                        <input type="number" id="m3" min="0"><br><br>
+                        <button type="button" onclick="calcularFactura()">Calcular factura</button>
 
-                <div id="resultado" style="margin-top:20px;"></div>
+                    <div id="resultado2" style="margin-top:20px;"></div>
+                </div>
 
-                <!-- <h2 class="titulos">Ejercicio 3</h2>
+                <h2 class="titulos">Ejercicio 3</h2>
 
-                <label>Frase 1:</label>
-                <textarea name="frase1" id="frase1"></textarea><br><br>
-                <label>Frase 2:</label>
-                <textarea name="frase2" id="frase2"></textarea><br><br>
+                <label for="numero">Introduce un número con prefijo (0b, 0o, 0x o decimal):</label><br><br>
+                <input type="text" id="numero" placeholder="Ej: 0b1010, 0o17, 0x1F, 42">
+                <button onclick="convertir()">Convertir</button>
 
-                <button type="button" onclick="analizar(event)">Analizar</button>
-
+                <h4>Resultados:</h4>
                 <p id="resultado3"></p>
-
-
-                <h2 class="titulos">Ejercicio 4</h2>
-
-                <p>Introduce 3 palabras (mínimo 4, 5 y 6 letras respectivamente):</p>
-
-                <label>Primera palabra:</label>
-                <input type="text" id="palabra1"><br>
-                <label>Segunda palabra:</label>
-                <input type="text" id="palabra2"><br>
-                <label>Tercera palabra:</label>
-                <input type="text" id="palabra3"><br><br>
-
-                <button type="button" onclick="generarPalabra(event)">Generar palabra</button>
-
-                <p id="resultado4"></p>
-
-
-                <h2 class="titulos">Ejercicio 5</h2>
-
-                <p>Introduce un texto (mínimo 3 palabras) y un carácter a buscar:</p>
-
-                <label>Texto:</label>
-                <textarea id="textoBuscar"></textarea><br>
-                <label>Carácter:</label>
-                <input type="text" id="caracterBuscar" maxlength="1"><br><br>
-
-                <button type="button" onclick="contarCaracter(event)">Contar</button>
-
-                <p id="resultado5"></p>
-
-
-                <h2 class="titulos">Ejercicio 6</h2>
-
-                <p>Introduce el número de cadenas aleatorias a generar (de 0 a 10 caracteres cada una):</p>
-
-                <label>Número de cadenas:</label>
-                <input type="number" id="numCadenas" min="1"><br><br>
-
-                <button type="button" onclick="generarCadenas(event)">Generar cadenas</button>
-
-                <p id="resultado6"></p> -->
 
             </div>
         </main>
