--- a/PIM/ProyecValenBici/index.html
+++ b/PIM/ProyecValenBici/index.html
@@ -1,27 +1,55 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Disponibilidad Valenbisi</title>
-  <link rel="stylesheet" href="css/estilos.css">
-  <script src="js/app.js" type="module"></script>
-  <script src="js/datos.js" type="module"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Disponibilidad Valenbisi — Proyecto DIW</title>
+<link rel="stylesheet" href="css/estilos.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
 </head>
 <body>
-  <h1>Disponibilidad Valenbisi</h1>
-  <table id="valenbisi-table">
-    <thead>
-      <tr>
-        <th>Número estación</th>
-        <th>Dirección</th>
-        <th>Bicis disponibles</th>
-        <th>Anclajes libres</th>
-        <th>Total anclajes</th>
-        <th>Última actualización</th>
-        <th>Disponibilidad</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+<header class="cabecera">
+<h1>Disponibilidad Valenbisi</h1>
+<p class="sub">Consulta las estaciones más cercanas y su disponibilidad en tiempo real.</p>
+</header>
+
+
+<main class="contenedor">
+<section id="controles" class="panel">
+<label for="num-estaciones">Mostrar</label>
+<input id="num-estaciones" type="range" min="1" max="50" value="10">
+<span id="num-estaciones-val">10</span> estaciones
+<button id="btn-refrescar">Refrescar datos</button>
+</section>
+
+
+<section id="mapa" class="mapa"></section>
+
+
+<section id="tabla-panel" class="panel tabla-panel">
+<table id="tabla-estaciones">
+<thead>
+<tr>
+<th>#</th>
+<th>Dirección</th>
+<th>Bicis</th>
+<th>Anclajes libres</th>
+<th>Total</th>
+<th>Distancia (m)</th>
+<th>Actualización</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</section>
+</main>
+
+
+<footer class="pie">Proyecto Interdisciplinar — Disponibilidad Valenbisi</footer>
+
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
