--- a/DWEC/Actividades/Act_2-3/Index/Ejer1.html
+++ b/DWEC/Actividades/Act_2-3/Index/Ejer1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ejercicios Actividad 2.3</title>
-    <script src="./script1.js"></script>
+    <script src="../Scripts/script1.js"></script>
 
     <style>
       .cabeza {
