--- a/DWEC/Actividades/Act_2-3/Index/Ejer2.html
+++ b/DWEC/Actividades/Act_2-3/Index/Ejer2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ejercicios Actividad 2.3</title>
-    <script src="/DWEC/Scripts/Act_2-3Corregido/script2.js"></script>
+    <script src=""../Scripts/script2.js"></script>
 
     <style>
       .cabeza {
