--- a/DWEC/Actividades/Act_2-3/Index/Ejer3.html
+++ b/DWEC/Actividades/Act_2-3/Index/Ejer3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ejercicios Actividad 2.3</title>
-    <script src="script2.js"></script>
+    <script src="../Scripts/script3.js"></script>
 
     <style>
       .cabeza {
@@ -43,8 +43,8 @@
 
     <main>
       <div class="divClass">
-        <h2 class="titulos">Ejercicio 2</h2>
-        <button onclick="facturaPrompt()">Ejecutar</button>
+        <h2 class="titulos">Ejercicio 3</h2>
+        <button onclick="convertirPrompt()">Ejecutar</button>
       </div>
     </main>
 
