--- a/DWEC/Actividades/Act_2-2/Index/Ejer5.html
+++ b/DWEC/Actividades/Act_2-2/Index/Ejer5.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Ejercicios Actividad 2.2  </title>
-        <script src = "../Scripts/script1.js"></script>
+        <script src = "../Scripts/script5.js"></script>
 
         <style>
 
@@ -46,10 +46,11 @@
             <h1>Ejercicios Actividad 2.2</h1>
         </header>
         
+        
         <main>
             <div class="divClass"">
-            <h2 class="titulos">Ejercicio 1</h2>
-                <button type="button" onclick="iguales()">Procesar</button>
+                <h2 class="titulos">Ejercicio 5</h2>
+                <button type="button" onclick="contarCaracter()">Generar</button>
             </div>
         </main>
 
