--- a/DWEC/Actividades/Act_3-4/Index/Ejer2.html
+++ b/DWEC/Actividades/Act_3-4/Index/Ejer2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ejercicios Actividad 3.4</title>
-    <script src="../Scripts/script1.js"></script>
+    <script src="../Scripts/script2.js"></script>
 
     <style>
       .cabeza {
@@ -43,8 +43,8 @@
 
     <main>
       <div class="divClass">
-        <h2 class="titulos">Ejercicio 1</h2>
-        <button onclick="setFunction()">Ejecutar</button>
+        <h2 class="titulos">Ejercicio 2</h2>
+        <button onclick="mapFunction()">Ejecutar</button>
       </div>
     </main>
 
