--- a/DInterfaz/PracticaUD11/Ejer1/index2.html
+++ b/DInterfaz/PracticaUD11/Ejer1/index2.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicios UD11</title>
+    <title>Ejercicio 2</title>
 </head>
 <body>
-    <script src="./theme-toggle.js"></script>  
+    <div id="contenedor">
+        <h2>Lista de Tareas</h2>
+    </div>
+
+    <script src="./Ejer2.js"></script>    
 </body>
 </html>
