--- a/DWEC/examenTest_de_prueba/index_test_prueba.html
+++ b/DWEC/examenTest_de_prueba/index_test_prueba.html
@@ -36,6 +36,6 @@
             </div>
     </div>
 
-    <script src="script_prueba.js"></script>
+    <script src="script_prueba3.js"></script>
 </body>
 </html>
