--- a/PIM/ProyecKanban/task-manager-table.html
+++ b/PIM/ProyecKanban/task-manager-table.html
@@ -197,6 +197,7 @@
                             <option value="Done">Done</option>
                             <option value="Today">Today</option>
                             <option value="Tomorrow">Tomorrow</option>
+                            <option value="Someday">Someday</option>
                             <option value="Deleted">Deleted</option>
                         </select>
                     </td>
