--- a/DWEC/Actividades/Act_5-2/index.html
+++ b/DWEC/Actividades/Act_5-2/index.html
@@ -43,7 +43,6 @@
                 <p id = "cash" style = "color: green">Contra Reembolso</p>    
             </li>       
         </ul>
-        
-
-</body>
+        <script src="scritp.js"></script>
+    </body>
 </html>
