--- a/DWEC/Actividades/Act_6-1/index.html
+++ b/DWEC/Actividades/Act_6-1/index.html
@@ -24,8 +24,12 @@
                             id="moneda"
                             name="moneda"
                         >
-                                <option value="" disabled selected>Elige tu moneda</option>
-                                <option value="USD">Dolar</option>
+                            <option value="" disabled selected>Elige tu moneda</option>
+                            <option value="USD">Dólar (USD)</option>
+                            <option value="EUR">Euro (EUR)</option>
+                            <option value="GBP">Libra (GBP)</option>
+                            <option value="JPY">Yen (JPY)</option>
+                            <option value="MXN">Peso mexicano (MXN)</option>
                         </select>
                     </div>
 
